# fhir-ig-rag

./: .gitignore  Makefile  Makefile.PHONY:  README.md  docker-compose.yml  pyproject.toml  quality-assessment.md
alembic/: env.py
alembic/versions/: 1d3a0c4c0c2d_add_sd_elements_table.py  4ffc445ce723_create_packages_and_artifacts.py  7f2b2b8c9f4e_add_sd_bindings_and_constraints.py  9a1c5b0c2f3b_normalize_sd_binding_valueset.py
app/api/: db.py  main.py
app/db/: config.py  engine.py  models.py
app/ingest/: cli.py
app/ingest/loaders/: sd_bindings_loader.py  sd_constraints_loader.py  sd_elements_loader.py
app/mcp_server/: server.py
docs/: example_Patient_name_requirements_for_PS-CA_deterministic  example_element_details.md  example_profile_summary.md  examples_01.md  examples_02.md  examples_03.md  golden_questions_psca.md
fhir_ig_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: db_smoke_test.py  gen_golden_questions_psca.py
tests/acceptance/: psca_golden_questions.json
