[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir-ig-rag"
version = "0.1.0"
description = "PS-CA IG ingestion + Postgres-backed retrieval + MCP tools"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "typer>=0.12",
  "mcp>=0.0.6",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
